--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
     <br>
     <br>
     <div class="row" id="aboutClass">
-    
+
         <div class="column">
             <!-- <center> -->
             <img src="images.jpg" alt="About us " width="700px" style="padding-left:10%">
             <!-- </center> -->
         </div>
-        <div class="column" style="padding-right:10% ;">
+        <div class="column" style="padding-right:7% ;padding-left: 7%;">
             <center>
                 <h1 style="font-family:Playfair Display;">About Catering</h1>
                 <h5 style="font-family:Playfair Display;">Since 2000</h5>
@@ -185,12 +185,14 @@
                 <img src="instagram.png">
                 Contact us on Instagram
             </p>
-            <p  onclick="telegram()">
-            <img src="telegram (1).png">
-            Contact us on Telegram</p>
+            <p onclick="telegram()">
+                <img src="telegram (1).png">
+                Contact us on Telegram
+            </p>
             <p onclick="youtube()">
-            <img src="youtube (1).png">
-            Check out our YouTube channel</p>
+                <img src="youtube (1).png">
+                Check out our YouTube channel
+            </p>
         </div>
     </center>
 
